# deepseek-v3.2-from-scratch

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TINY_MODEL_TRAINING.md  pyproject.toml  requirements-tiny.txt
.github/: FUNDING.yml
Deepseek-from-scratch-in-rust/: Cargo.toml  DOCUMENTATION.md
Deepseek-from-scratch-in-rust/src/: lib.rs  main.rs
Deepseek-from-scratch-in-rust/src/benchmarks/: attention_benchmark.rs  mod.rs  moe_benchmark.rs  mtp_fp8_benchmark.rs  training_benchmark.rs
Deepseek-from-scratch-in-rust/src/distributed/: backend.rs  expert.rs  groups.rs  mod.rs  nccl_backend.rs  nccl_sys.rs  parallel.rs  pipeline.rs  ring_attention.rs  tp_ops.rs
Deepseek-from-scratch-in-rust/src/model/: attention.rs  inference.rs  kv_cache.rs  mla.rs  mod.rs  moe.rs  mtp.rs  quantization.rs  r1.rs  reward_model.rs  sparse_attention.rs
Deepseek-from-scratch-in-rust/src/training/: agent.rs  distillation.rs  grpo.rs  mod.rs  pipeline.rs  sft.rs  training.rs
Deepseek-from-scratch-in-rust/src/utils/: checkpoint.rs  config.rs  error.rs  logging.rs  metrics.rs  mod.rs  retry.rs
Deepseek-from-scratch-in-rust/tests/: integration_tests.rs  model_tests.rs  v32_integration_tests.rs
configs/: __init__.py  tiny_mlx_config.py  tiny_mlx_full.json  tiny_mlx_quick.json  tiny_test.json
deepseek-from-scratch-python/mlx_impl/: __init__.py  agent.py  attention.py  benchmark.py  distillation.py  dpo.py  grpo.py  main.py  moe.py  mtp.py  pipeline.py  quantization.py  r1.py  reward_model.py  sft.py  sparse_attention.py  tiny_trainer.py
deepseek-from-scratch-python/src/deepseek/: main.py
deepseek-from-scratch-python/src/deepseek/model/: attention.py  ep_utils.py  mla.py  moe.py  mtp.py  parallel.py  pipeline.py  quantization.py  r1.py  reward_model.py  ring_attention.py  sparse_attention.py  transformer.py
deepseek-from-scratch-python/src/deepseek/training/: __init__.py  agent.py  distillation.py  dpo.py  grpo.py  pipeline.py  sft.py  training.py
deepseek-from-scratch-python/src/deepseek/utils/: benchmark.py  checkpoint.py  config_loader.py  distributed.py  errors.py  export_coreml.py  logging.py  validation.py
deepseek-from-scratch-python/tests/: test_mlx_v32.py  test_phase6_mlx.py  test_phase6_production.py  test_pytorch_v32.py  test_structure.py
deepseek-from-scratch-python/tests/model/: test_attention.py  test_ep.py  test_kv_cache.py  test_moe.py  test_parallel.py  test_pp.py  test_sp.py
deepseek-from-scratch-python/tests/training/: test_distributed.py  test_training.py
docs/: 01-multi-query-attention.md  02-grouped-query-attention.md  03-multi-head-latent-attention.md  04-deepseek-attention.md  05-standard-moe.md  06-deepseek-moe.md  07-multi-token-prediction.md  08-fp8-quantization.md  09-grpo.md  10-training-infrastructure.md  11-training-pipeline.md  12-post-training.md  13-knowledge-distillation.md  14-v32-architecture.md  15-5d-parallelism.md  16-zero-optimization.md  17-deepseek-sparse-attention.md  18-256-expert-moe.md  19-multi-token-prediction.md  20-fp8-mixed-precision.md  21-agent-tool-use-training.md  README.md  implementation_analysis.md
modal_gpu/: __init__.py  app.py  config.py  distributed_trainer.py  gpu_runner.py  pytorch_cuda.py  rust_cuda.py
ray_pipeline/: __init__.py  cli.py  config.py  workflow.py
ray_pipeline/runners/: __init__.py  base.py  mlx_runner.py  modal_runner.py  pytorch_runner.py  rust_runner.py
ray_pipeline/stages/: __init__.py  base.py  data_prep.py  distillation.py  export.py  grpo.py  pretrain.py  sft.py
scripts/: check_docs.py  download_tinystories.py  export_gguf.py  inference.py  run_tiny_training.sh  train_tiny.py
